syntax = "proto3";
package localapi;

import "github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis/google/api/annotations.proto";
import "google/protobuf/empty.proto";

message BundleRequest {
    string BundleID = 1;
    string TargetDir = 2;
}

// CertRequest is a request to get a private key and certificate signed by cert authority
message CertRequest {
	// CertAuthorityID is ID of the certificate authority
	string CertAuthorityID  = 1;
	// ID is identity to generate
	string ID = 2;
	// CommonName is a common name to produce
	string CommonName = 3;
	// TTL is certificate TTL
	int64 TTL = 4;
	// KeyPath is a key path of the certificate
	string KeyPath = 5;
	// CertPath is a path of the generated certificate
	string CertPath = 6;
	// CAPath is a path of the certificate authority cert  that signed this cert
	string CAPath = 7;
}

message BundleRequests {
    repeated BundleRequest BundleRequests = 1;
}

message CertRequests {
    repeated CertRequest CertRequests = 1;
}

message ID {
    string ID = 1;
}

service Renewer {
    rpc CreateCertRequest(CertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
			post: "/v1/local/certrequests"
			body: "*"
		};
    }

    rpc GetCertRequests(google.protobuf.Empty) returns (CertRequests) {
        option (google.api.http) = {
			get: "/v1/local/certrequests"
		};
    }   
    
    rpc DeleteCertRequest(ID) returns (google.protobuf.Empty) {
        option (google.api.http) = {
			delete: "/v1/local/certrequests/{ID}"
		};
    }

    
    rpc CreateBundleRequest(BundleRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
			post: "/v1/local/bundlerequests"
			body: "*"
		};
    }

    rpc GetBundleRequests(google.protobuf.Empty) returns (BundleRequests) {
        option (google.api.http) = {
			get: "/v1/local/bundlerequests"
		};
    }   
    
    rpc DeleteBundleRequest(ID) returns (google.protobuf.Empty) {
        option (google.api.http) = {
			delete: "/v1/local/bundlerequests/{ID}"
		};
    }
}
